--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 run/*
+*.class
 
 # Windows image file caches
 Thumbs.db
@@ -47,3 +48,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.class
